--- a/templates/product.html
+++ b/templates/product.html
@@ -84,7 +84,7 @@
     <!-- PLUGINS -->
 
     <!-- proxy-module cut-head -->
-    <link type="text/css" rel="stylesheet" href="../static/vendors-async.css">
+    <link type="text/css" rel="stylesheet" href="../static/css/vendors-async.css">
     <script async="" type="text/javascript" src="../static/libs/delivery-builder.js"></script>
     <script async="" type="text/javascript" src="../static/libs/vendors-async.js"></script>
     <script async="" type="text/javascript" src="../static/libs/swiper-async.js"></script>
@@ -268,7 +268,7 @@
             position: absolute;
             z-index: 1
         }</style>
-    <script type="text/javascript" charset="UTF-8" src="../static/common.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../static/libs/jquery.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../static/util.js.завантаження"></script>
     <script type="text/javascript" charset="UTF-8" src="../static/map.js.завантаження"></script>
     <script type="text/javascript" charset="UTF-8" src="../static/marker.js.завантаження"></script>
