--- a/templates/price.html
+++ b/templates/price.html
@@ -202,7 +202,7 @@
             z-index: 1
         }</style>
 </head>
-<body class="area font-text-roboto font-header-roboto screen-lg region-int" style="">
+<body class="area font-text-roboto font-header-roboto region-int" style="">
 <div class="area-wrapper">
     <div class="node section-clear section sm-hidden css13 fixation-top"
          data-fixation="{&quot;lg&quot;:&quot;top&quot;,&quot;md&quot;:&quot;top&quot;,&quot;sm&quot;:&quot;top&quot;,&quot;xs&quot;:&quot;none&quot;}"
@@ -516,8 +516,7 @@
                                                                     <div class="bgnormal"><a
                                                                             href="https://carplay.in.ua/"
                                                                             target="_blank"><img class="lazy" alt=""
-                                                                                                 src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAECAYAAACHtL/sAAAAAXNSR0IArs4c6QAAABNJREFUKFNjZKAQMFKon2HgDQAAA44ABTqZsnQAAAAASUVORK5CYII="
-                                                                                                 data-lazy-image="https://img2.creatium.app/7e/f1/bd/8030bcd3b79fd26fefbf6aac579fd08a1b/cpls.svg#%7B%22size%22:%5B2268,567%5D,%22quality%22:8%7D"
+                                                                                                 src="https://img2.creatium.app/7e/f1/bd/8030bcd3b79fd26fefbf6aac579fd08a1b/cpls.svg#%7B%22size%22:%5B2268,567%5D,%22quality%22:8%7D"
                                                                                                  data-lazy-image_resize="true"
                                                                                                  data-lazy-image_detect="css-width"
                                                                                                  style="border-radius: 0px; --width: 2268px; --height: 567px; --ratio: 4;"></a>
