--- a/templates/index.html
+++ b/templates/index.html
@@ -1321,35 +1321,37 @@
                             </div>
                         </div>
                         <div cr-slider-pagination="" class="gallery1-pagination opacity bottom">
-                            <div cr-slider-page="" class="gallery1-page">
+                            <div class="swiper-wrapper">
+                            <div class="swiper-slide gallery1-page">
                                 <div cr-slider-page_image="" class="gallery1-page-image">
                                     <div class=""
                                          style="background-image: url('../static/img/photo_1.jpg');"></div>
                                 </div>
                             </div>
-                            <div cr-slider-page="" class="gallery1-page is-active">
+                            <div class="swiper-slide gallery1-page">
                                 <div cr-slider-page_image="" class="gallery1-page-image">
                                     <div class=""
                                          style="background-image: url('../static/img/photo_2.jpg');"></div>
                                 </div>
                             </div>
-                            <div cr-slider-page="" class="gallery1-page">
+                            <div class="swiper-slide gallery1-page">
                                 <div cr-slider-page_image="" class="gallery1-page-image">
                                     <div class=""
                                          style="background-image: url('../static/img/photo_3.jpg');"></div>
                                 </div>
                             </div>
-                            <div cr-slider-page="" class="gallery1-page">
+                            <div class="swiper-slide gallery1-page">
                                 <div cr-slider-page_image="" class="gallery1-page-image">
                                     <div class=""
                                          style="background-image: url('../static/img/photo_4.jpg');"></div>
                                 </div>
                             </div>
-                            <div cr-slider-page="" class="gallery1-page">
+                            <div class="swiper-slide gallery1-page">
                                 <div cr-slider-page_image="" class="gallery1-page-image">
                                     <div class=""
                                          style="background-image: url('../static/img/photo.jpg');"></div>
                                 </div>
+                            </div>
                             </div>
                         </div>
                     </div>
