add product modal

--- a/templates/price.html
+++ b/templates/price.html
@@ -5361,18 +5361,21 @@
                     <div class="modal4-panel2">
                         <div class="cont">
                             <div class="node widget-form2 cr-form widget css6"
+                                 data-form="{&quot;action&quot;:&quot;order&quot;,&quot;name&quot;:&quot;Заявка (Главная Ua)&quot;,&quot;after&quot;:&quot;url&quot;,&quot;msg&quot;:&quot;Спасибо!\nВаша заявка отправлена.\nВ ближайшее время мы с Вами свяжемся!&quot;,&quot;url&quot;:&quot;/thankyou&quot;,&quot;urlauto&quot;:true,&quot;urlclean&quot;:true,&quot;addhtml&quot;:&quot;&lt;!-- Этот код будет вставлен перед закрывающим тегом BODY --&gt;&quot;,&quot;js&quot;:&quot;alert(\&quot;Этот код выполняется после успешного отправления заявки.\&quot;);&quot;,&quot;sequence&quot;:&quot;stepwise&quot;}"
                                  data-isquiz="false">
                                 <div>
                                     <div class="metahtml css47">
 
                                         <div class="form1-cover">
-                                            <div>
+                                            <div cr-form-container=""
+                                                 colorside="cover_bgcolored?cover_bgcolor.colorside():_colorside">
                                                 <div class="cont">
                                                     <div class="node widget-text cr-text widget css48"><p
                                                             class="textable css49"><strong>ЛИШИТИ ЗАЯВКУ</strong></p>
                                                     </div>
                                                     <div class="node widget-field cr-field widget css50">
-                                                        <div class="metahtml css51">
+                                                        <div class="metahtml css51"
+                                                             data-vals="{&quot;condition&quot;:&quot;&quot;,&quot;variable&quot;:&quot;&quot;,&quot;variable2&quot;:&quot;&quot;,&quot;text&quot;:&quot;Ім&#39;я&quot;,&quot;type&quot;:&quot;name&quot;,&quot;required&quot;:false,&quot;id&quot;:&quot;&quot;,&quot;valueOn&quot;:&quot;1&quot;,&quot;valueOff&quot;:&quot;0&quot;,&quot;privacy_checkbox&quot;:&quot;Даю согласие на &lt;обработку персональных данных&gt;&quot;,&quot;typing&quot;:&quot;string&quot;,&quot;formula&quot;:&quot;&quot;,&quot;format&quot;:&quot;%result% руб.&quot;,&quot;min&quot;:&quot;0&quot;,&quot;max&quot;:&quot;100&quot;,&quot;step&quot;:&quot;1&quot;,&quot;template&quot;:&quot;&quot;}">
                                                             <div cr-field="name" class="is-text">
                                                                 <div class="name">
                                                                     Ім'я
