--- a/templates/product.html
+++ b/templates/product.html
@@ -4073,7 +4073,127 @@
         <div class="padding_bottom"></div>
     </div>
     <div class="node section section-helper css301"></div>
+    <div class="modal nocolors css43" data-name="modal" data-type="modal" data-duration="300" id="modal-form"
+         data-uid="ulrz334zofzo53iihjzp_0" style="z-index: 810;">
+        <div class="modal-back" style="background-color: rgba(0, 0, 0, 0.5); display: none;"></div>
+        <div class="modal-dialog">
+            <div class="metahtml css44">
+                <div cr-modal-root="" class="modal4-root">
+                    <div class="modal4-panel1">
+                        <button cr-modal-close="" class="modal4-close">
+                            <span class="modal4-close-v"></span>
+                            <span class="modal4-close-h"></span>
+                        </button>
+                        <div class="cont">
+                            <div class="node widget-image widget css45 css46">
+                                <div class="bgnormal"><img class="" alt="" src="../static/img/cpls1.png"
+                                                           style="border-radius: 0px; --width:800px; --height:200px; --ratio:4;">
+                                </div>
+                                <noscript><img
+                                        src="https://img2.creatium.app/a4/3f/01/f2b4a011c755910372b5d097893bb8c916/cpls1.png#%7B%22size%22:%5B800,200%5D,%22quality%22:8%7D"
+                                        alt=""></noscript>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal4-panel2">
+                        <div class="cont">
+                            <div class="node widget-form2 cr-form widget css6"
+                                 data-form="{&quot;action&quot;:&quot;order&quot;,&quot;name&quot;:&quot;Заявка (Главная Ua)&quot;,&quot;after&quot;:&quot;url&quot;,&quot;msg&quot;:&quot;Спасибо!\nВаша заявка отправлена.\nВ ближайшее время мы с Вами свяжемся!&quot;,&quot;url&quot;:&quot;/thankyou&quot;,&quot;urlauto&quot;:true,&quot;urlclean&quot;:true,&quot;addhtml&quot;:&quot;&lt;!-- Этот код будет вставлен перед закрывающим тегом BODY --&gt;&quot;,&quot;js&quot;:&quot;alert(\&quot;Этот код выполняется после успешного отправления заявки.\&quot;);&quot;,&quot;sequence&quot;:&quot;stepwise&quot;}"
+                                 data-isquiz="false">
+                                <div>
+                                    <div class="metahtml css47">
 
+                                        <div class="form1-cover">
+                                            <div cr-form-container=""
+                                                 colorside="cover_bgcolored?cover_bgcolor.colorside():_colorside">
+                                                <div class="cont">
+                                                    <div class="node widget-text cr-text widget css48"><p
+                                                            class="textable css49"><strong>ЛИШИТИ ЗАЯВКУ</strong></p>
+                                                    </div>
+                                                    <div class="node widget-field cr-field widget css50">
+                                                        <div class="metahtml css51"
+                                                             data-vals="{&quot;condition&quot;:&quot;&quot;,&quot;variable&quot;:&quot;&quot;,&quot;variable2&quot;:&quot;&quot;,&quot;text&quot;:&quot;Ім&#39;я&quot;,&quot;type&quot;:&quot;name&quot;,&quot;required&quot;:false,&quot;id&quot;:&quot;&quot;,&quot;valueOn&quot;:&quot;1&quot;,&quot;valueOff&quot;:&quot;0&quot;,&quot;privacy_checkbox&quot;:&quot;Даю согласие на &lt;обработку персональных данных&gt;&quot;,&quot;typing&quot;:&quot;string&quot;,&quot;formula&quot;:&quot;&quot;,&quot;format&quot;:&quot;%result% руб.&quot;,&quot;min&quot;:&quot;0&quot;,&quot;max&quot;:&quot;100&quot;,&quot;step&quot;:&quot;1&quot;,&quot;template&quot;:&quot;&quot;}">
+                                                            <div cr-field="name" class="is-text">
+                                                                <div class="name">
+                                                                    Ім'я
+                                                                </div>
+                                                                <div class="input">
+                                                                    <input type="text" il-action="listen"
+                                                                           autocomplete="name" class="form-control"
+                                                                           value="">
+                                                                </div>
+                                                                <div cr-field-addon="">
+                                                                    <div class="metahtml">
+
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="node widget-field cr-field widget css50">
+                                                        <div class="metahtml css51"
+                                                             data-vals="{&quot;condition&quot;:&quot;&quot;,&quot;variable&quot;:&quot;&quot;,&quot;variable2&quot;:&quot;&quot;,&quot;text&quot;:&quot;Номер телефона&quot;,&quot;type&quot;:&quot;phone&quot;,&quot;required&quot;:true,&quot;id&quot;:&quot;&quot;,&quot;valueOn&quot;:&quot;1&quot;,&quot;valueOff&quot;:&quot;0&quot;,&quot;privacy_checkbox&quot;:&quot;Даю согласие на &lt;обработку персональных данных&gt;&quot;,&quot;typing&quot;:&quot;string&quot;,&quot;formula&quot;:&quot;&quot;,&quot;format&quot;:&quot;%result% руб.&quot;,&quot;min&quot;:&quot;0&quot;,&quot;max&quot;:&quot;100&quot;,&quot;step&quot;:&quot;1&quot;,&quot;template&quot;:&quot;&quot;}">
+                                                            <div cr-field="phone" class="is-text">
+                                                                <div class="name">
+                                                                    Номер телефона *
+                                                                </div>
+                                                                <div class="input">
+                                                                    <input type="text" il-action="listen"
+                                                                           autocomplete="tel" class="form-control"
+                                                                           value="" maxlength="19">
+                                                                </div>
+                                                                <div cr-field-addon="">
+                                                                    <div class="metahtml">
+
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="node widget-field cr-field widget css50">
+                                                        <div class="metahtml css51"
+                                                             data-vals="{&quot;condition&quot;:&quot;&quot;,&quot;variable&quot;:&quot;&quot;,&quot;variable2&quot;:&quot;&quot;,&quot;text&quot;:&quot;Яке у вас авто?&quot;,&quot;type&quot;:&quot;text&quot;,&quot;required&quot;:false,&quot;id&quot;:&quot;&quot;,&quot;valueOn&quot;:&quot;1&quot;,&quot;valueOff&quot;:&quot;0&quot;,&quot;privacy_checkbox&quot;:&quot;Даю согласие на &lt;обработку персональных данных&gt;&quot;,&quot;typing&quot;:&quot;string&quot;,&quot;formula&quot;:&quot;&quot;,&quot;format&quot;:&quot;%result% руб.&quot;,&quot;min&quot;:&quot;0&quot;,&quot;max&quot;:&quot;100&quot;,&quot;step&quot;:&quot;1&quot;,&quot;template&quot;:&quot;&quot;}">
+                                                            <div cr-field="text" class="is-text">
+                                                                <div class="name">
+                                                                    Яке у вас авто?
+                                                                </div>
+                                                                <div class="input">
+                                                                    <input type="text" il-action="listen"
+                                                                           class="form-control cr-field-input" value="">
+                                                                </div>
+                                                                <div cr-field-addon="">
+                                                                    <div class="metahtml">
+
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="node widget-button widget css50">
+                                                        <div class="button-container full">
+                                                            <div class="button-wrapper">
+                                                                <button class="btn btn-legacy font-text css52"
+                                                                        data-action="send">
+                                                                    <div class="pad-left" style="width: 28px;"></div>
+                                                                    <div class="btn-content"><span class="text">Відправити</span>
+                                                                    </div>
+                                                                    <div class="pad-right" style="width: 28px;"></div>
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
