--- a/static/css/index-product.css
+++ b/static/css/index-product.css
@@ -10112,3 +10112,443 @@
     max-width: 737px;
     padding: 0 0px;
 }
+
+.modal.css43 .modal-dialog {
+    width: 400px
+}
+.node.css43  img {
+    width: calc(0.4 * var(--width))
+}
+
+.node.css43  .bgnormal {
+    text-align: center
+}
+.metahtml.css488 .modal4-root {
+    border-radius: 6px;
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transform: scale(1.1);
+    transition: 300ms all ease-out;
+}
+
+.metahtml.css488 .modal4-root.is-active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.metahtml.css488 .modal4-root.is-hiding {
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+.metahtml.css488 .modal4-panel1 {
+    padding: 15px;
+    background-color: rgb(19, 19, 19);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+.metahtml.css488 .modal4-panel2 {
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.metahtml.css488 .modal4-close {
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 100px;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    top: -10px;
+    right: -10px;
+    transition: transform 200ms;
+}
+
+.metahtml.css488 .modal4-close-h,
+.metahtml.css488 .modal4-close-v {
+    background-color: black;
+    display: block;
+    width: 16px;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+.metahtml.css488 .modal4-close-h {
+    transform: translate(-50%, -50%) rotate(135deg);
+}
+
+.metahtml.css488 .modal4-close-v {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.metahtml.css488 .modal4-close:hover {
+    transform: scale(1.1);
+}
+
+.modal.css529 .modal-dialog {
+    width: 390px
+}
+
+.metahtml.css44 .modal4-panel1 {
+    padding: 15px;
+    background-color: rgb(19, 19, 19);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+.metahtml.css44 .modal4-panel2 {
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.metahtml.css44 .modal4-close {
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 100px;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    top: -10px;
+    right: -10px;
+    transition: transform 200ms;
+}
+
+.metahtml.css44 .modal4-close-h,
+.metahtml.css44 .modal4-close-v {
+    background-color: black;
+    display: block;
+    width: 16px;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+.metahtml.css44 .modal4-close-h {
+    transform: translate(-50%, -50%) rotate(135deg);
+}
+
+.metahtml.css44 .modal4-close-v {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.metahtml.css44 .modal4-close:hover {
+    transform: scale(1.1);
+}
+
+.metahtml.css51 .form-control {
+    height: auto;
+    line-height: 1.2;
+    box-shadow: none;
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0px;
+    padding: 12px 9.6px;
+    font-size: 14px;
+    cursor: initial;
+}
+
+.metahtml.css51 .form-control:focus,
+.metahtml.css51 .form-control:focus-within {
+    border-color: rgb(15, 212, 28);
+    background-color: rgb(252, 252, 252);
+}
+
+.metahtml.css51 .form-control + .form-control {
+    margin-top: 10px;
+}
+
+.metahtml.css51 label {
+    font-weight: normal;
+    display: block;
+    cursor: pointer;
+}
+
+.metahtml.css51 textarea {
+    resize: vertical;
+}
+
+.metahtml.css51 .checkbox {
+    width: 22px;
+    height: 22px;
+    padding: 0;
+    margin: 0 5.5px 0 0;
+    line-height: 0;
+    min-height: auto;
+    display: inline-block;
+    vertical-align: middle;
+    background: white;
+    border: 2px solid rgba(0, 0, 0, 0.25);
+    position: relative;
+    transition: 300ms all;
+    border-radius: 2px;
+}
+
+.metahtml.css51 .checkbox svg {
+    width: 100%;
+    opacity: 0;
+    transform: scale(0);
+    transition: 300ms all;
+}
+
+.metahtml.css51 input:hover ~ .checkbox,
+.metahtml.css51 input:focus ~ .checkbox {
+    border-color: rgb(123, 246, 131);
+}
+
+.metahtml.css51 input:checked ~ .checkbox {
+    border-color: rgb(14, 191, 25);
+    background-color: rgb(15, 212, 28);
+}
+
+.metahtml.css51 input:active ~ .checkbox {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.metahtml.css51 input:checked ~ .checkbox svg {
+    opacity: 1;
+    transform: scale(1);
+}
+.btn.css52 {
+    text-align: center
+}
+
+.btn.css52 {
+    background-color: rgb(15, 212, 28);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-style: solid;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-color: rgb(12, 170, 22);
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(255, 255, 255) !important;
+}
+
+.btn.css52:hover, .btn.css52.hover {
+    background-color: rgb(14, 191, 25);
+    border-color: rgb(10, 136, 18);
+    color: rgb(255, 255, 255) !important;
+}
+
+.btn.css52:active, .btn.css52.active {
+    background-color: rgb(12, 172, 23);
+    border-color: rgb(11, 153, 20);
+    color: rgb(255, 255, 255) !important;
+}
+
+.metahtml.css51 .name {
+    font-weight: normal;
+    font-family: Roboto;
+    opacity: 0.8;
+    margin-bottom: 6.5px;
+    font-size: 13px;
+    word-wrap: break-word;
+    text-transform: uppercase;;
+    letter-spacing: 0.1em;;
+}
+
+.metahtml.css51 .form-control {
+    height: auto;
+    line-height: 1.2;
+    box-shadow: none;
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0px;
+    padding: 12px 9.6px;
+    font-size: 14px;
+    cursor: initial;
+}
+
+.metahtml.css51 .form-control:focus,
+.metahtml.css51 .form-control:focus-within {
+    border-color: rgb(15, 212, 28);
+    background-color: rgb(252, 252, 252);
+}
+
+
+.node.css48 {
+    color: #333;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px
+}
+
+.node.css48 a {
+    color: rgb(0, 0, 0)
+}
+
+.textable.css49 {
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 24px;
+    line-height: 1.4;
+    letter-spacing: 0em;
+    opacity: 1
+}
+
+.screen-xs .textable.css49 {
+    text-align: center !important
+}
+
+.node.css50 {
+    color: #333;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px
+}
+
+.node.css50 a {
+    color: rgb(0, 0, 0)
+}
+
+.metahtml.css51 [cr-field] {
+    padding-bottom: 14px;
+    font-size: 14px;
+    font-family: Roboto;
+}
+
+.metahtml.css51 .name {
+    font-weight: normal;
+    font-family: Roboto;
+    opacity: 0.8;
+    margin-bottom: 6.5px;
+    font-size: 13px;
+    word-wrap: break-word;
+    text-transform: uppercase;;
+    letter-spacing: 0.1em;;
+}
+
+.metahtml.css51 .form-control {
+    height: auto;
+    line-height: 1.2;
+    box-shadow: none;
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0px;
+    padding: 12px 9.6px;
+    font-size: 14px;
+    cursor: initial;
+}
+
+.metahtml.css51 .form-control:focus,
+.metahtml.css51 .form-control:focus-within {
+    border-color: rgb(15, 212, 28);
+    background-color: rgb(252, 252, 252);
+}
+
+.metahtml.css51 .form-control + .form-control {
+    margin-top: 10px;
+}
+
+.metahtml.css51 label {
+    font-weight: normal;
+    display: block;
+    cursor: pointer;
+}
+
+.metahtml.css51 textarea {
+    resize: vertical;
+}
+
+.metahtml.css51 .checkbox {
+    width: 22px;
+    height: 22px;
+    padding: 0;
+    margin: 0 5.5px 0 0;
+    line-height: 0;
+    min-height: auto;
+    display: inline-block;
+    vertical-align: middle;
+    background: white;
+    border: 2px solid rgba(0, 0, 0, 0.25);
+    position: relative;
+    transition: 300ms all;
+    border-radius: 2px;
+}
+
+.metahtml.css51 .checkbox svg {
+    width: 100%;
+    opacity: 0;
+    transform: scale(0);
+    transition: 300ms all;
+}
+
+.metahtml.css51 input:hover ~ .checkbox,
+.metahtml.css51 input:focus ~ .checkbox {
+    border-color: rgb(123, 246, 131);
+}
+
+.metahtml.css51 input:checked ~ .checkbox {
+    border-color: rgb(14, 191, 25);
+    background-color: rgb(15, 212, 28);
+}
+
+.metahtml.css51 input:active ~ .checkbox {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.metahtml.css51 input:checked ~ .checkbox svg {
+    opacity: 1;
+    transform: scale(1);
+}
+.btn.css52 {
+    text-align: center
+}
+
+.btn.css52 {
+    background-color: rgb(15, 212, 28);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-style: solid;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-color: rgb(12, 170, 22);
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(255, 255, 255) !important;
+}
+
+.btn.css52:hover, .btn.css52.hover {
+    background-color: rgb(14, 191, 25);
+    border-color: rgb(10, 136, 18);
+    color: rgb(255, 255, 255) !important;
+}
+
+.btn.css52:active, .btn.css52.active {
+    background-color: rgb(12, 172, 23);
+    border-color: rgb(11, 153, 20);
+    color: rgb(255, 255, 255) !important;
+}
